@@ -1,3 +1,11 @@
+2006-04-29  Luca Cavalli  <loopback@slackit.org>
+
+	* libgconf-bridge/gconf-bridge.c:
+	(window_binding_perform_scheduled_sync),
+	(window_binding_state_event_cb), (gconf_bridge_bind_window):
+
+	Save and restore window maximized state.
+
 2006-02-16  Jorn Baayen  <jorn@openedhand.com>
 
 	* configure.ac:
